Changelog
=========

3.1a4 - unreleased
------------------

- Added development information to README, this closes
  http://plone.org/products/linguaplone/issues/242.
  [hannosch]

- Lessen optimization in selector code, to deal with folderish objects used as
  default pages, refs http://plone.org/products/linguaplone/issues/228.
  [hannosch]

- Removed iterator for tabindex for Plone 4 compatibility.
  [hpeteragitator]

3.1a3 - 2010-05-25
------------------

- Small optimizations in invalidateTranslations, deletable language vocabulary
  and script - avoiding review state calculation and full object lookups.
  [hannosch]

- Removed logger instance and log method from ``config.py``.
  [hannosch]

- Removed unused variables from ``config.py``: ``DEBUG``, ``GLOBALS``,
  ``PKG_NAME``, ``SKIN_LAYERS``, ``SKIN_NAME``, ``INSTALL_DEMO_TYPES``.
  [hannosch]

- Added a general collection criteria translation sync functionality including
  language independent criteria support. This is currently not activated
  automatically and has no UI support yet. See the ``README.txt`` in the
  criteria sub-package for more caveats.
  [hannosch]

- Added tests to prove that indexing and updating reference fields works.
  [hannosch]

- Also handle multiValued references given by a tuple instead of a list in
  ``utils.translated_references``.
  [thet]

- Mini-optimization in language selector.
  [hannosch]

3.1a2 - 2010-03-29
------------------

- Fixed isCanonical inside portal_factory which could lead to strange errors.
  Thanks to Daniel Kraft for the patch. This closes
  http://plone.org/products/linguaplone/issues/236, 237 and 239.
  [hannosch]

- Links in the language selector where broken when using ``_vh_`` parts.
  This closes http://plone.org/products/linguaplone/issues/235.
  [ramon]

- Expanded test coverage extensively. Going from 84% to 93%.
  [hannosch]

- Removed unfinished ``new_manage_translations_form`` prototype.
  [hannosch]
