@@ -1,2 +1,2 @@
 [buildout]
-extends = test-plone-3.3.x.cfg
+extends = test-plone-4.0.x.cfg
